<resources>
    <string name="app_name">TaskMaster</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="already_account">Already Account?</string>
    <string name="mark_as_important">Mark as important!</string>
</resources>